# src/modules/user/user.route.ts
@@ -6,6 +6,7 @@ import {
   deleteUserHandler,
   getUserHandler,
   getUsersHandler,
+  putUserHandler,
 } from './user.controller';
 import { $ref } from './user.schema';
 
@@ -55,6 +56,20 @@ const userRoutes = async (server: FastifyInstance): Promise<void> => {
       tags: ['User'],
     },
     handler: deleteUserHandler,
+  });
+  server.put('/:id', {
+    schema: {
+      params: $ref('putUserParamsSchema'),
+      body: $ref('putUserRequestBodySchema'),
+      response: {
+        200: {
+          ...$ref('userSchema'),
+          description: 'user detail',
+        },
+      },
+      tags: ['User'],
+    },
+    handler: putUserHandler,
   });
 };
 export default userRoutes;
